<resources>
    <string name="app_name">MASKER ASN</string>
    <string name="app_id">com.bangkep.sistemabsensi</string>
    <string name="base_application">MASKER_ASN</string>
<!--    <string name="google_maps_key">AIzaSyBLxi2hOlCnGFxXZUVLzEAflzJioUz47aw</string>-->
    <string name="google_maps_key">AIzaSyBxQ5jafgIbQ4gvx7MaqzQuWvy3TaMkWZc</string>

    <string name="selamat_datang">Selamat Datang</string>
    <string name="login">Masuk</string>
    <string name="lanjut">Lanjut</string>
    <string name="sign_up">Daftar</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="text_atau">Atau</string>
    <string name="sign_up_dengan_jejaring_sosial">Daftar dengan jejaring sosial</string>
    <string name="full_name">Nama lengkap tanpa gelar</string>
    <string name="email">Email</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="enter_code">Masukkan Kode Verifikasi</string>
    <string name="username">Username</string>

    <string name="silahkan_pilih_jenis_akun_yang_akan_anda_buat">Silahkan pilih jenis akun yang akan Anda Buat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="keluar">Keluar</string>
    <string name="mohon_tunggu">Mohon Tunggu…</string>
    <string name="lewati">Lewati</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="action_chat">Chat</string>
    <string name="action_notif">Notifikasi</string>
    <string name="action_add">Tambah</string>
    <string name="action_share">Bagikan</string>

    <string name="menu_profile">Profil</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_pesan">Pesan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="pengaturan_privasi">Pengaturan Privasi</string>
    <string name="sign_out">Keluar</string>
    <string name="nama">Nama Lengkap</string>
    <string name="noHandphone">No. Handphone</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat_domisili">Alamat Domisili</string>
    <string name="update">Simpan</string>
    <string name="gelar">Gelar</string>
    <string name="provinsi">Provinsi</string>
    <string name="strata_1_sarjana">Strata 1 (Sarjana)</string>
    <string name="nama_perguruan_tinggi">Nama perguruan tinggi</string>
    <string name="strata_2_magister">Strata 2 (Magister)</string>
    <string name="strata_3_doktor">Strata 3 (Doktor)</string>
    <string name="kota_perguruan_tinggi">Kota perguruan tinggi</string>
    <string name="tahun_tamat">Tahun tamat</string>
    <string name="jurusan_program_studi">Jurusan / program studi</string>
    <string name="gelar_akademik">Gelar Akademik</string>
    <string name="beranda">Beranda</string>
    <string name="privasi">Privasi</string>
    <string name="tambah_jenis_akun">Tambah Jenis Akun</string>
    <string name="hapus_jenis_akun">Nonaktifkan Akun</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="tampilkan_alamat_saya">Tampilkan Alamat Saya</string>
    <string name="tampilkan_gelar_pendidikan">Tampilkan Gelar Pendidikan</string>
    <string name="tampilkan_lokasi_terkini_saya">Tampilkan Lokasi Saya</string>
    <string name="tampilkan_tempat_tanggal_lahir">Tampilkan tempat tanggal lahir</string>
    <string name="kecamatan">Kecamatan,</string>
    <string name="kabupaten_kota">Kabupaten / Kota,</string>
    <string name="input_text">Input Text</string>
    <string name="tambah">Tambah</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="alamat">Alamat</string>
    <string name="pick_alamt_kantor_di_map">Pick alamat kantor di map</string>
    <string name="alamat_rumah_jalan_perumahan_block_no">Alamat Rumah (Jalan, Perumahan, Block, No)</string>
    <string name="reset">Reset</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_alamat">Pick Alamat</string>
    <string name="silahkan_pick_alamat_anda">Silahkan pick alamat anda</string>

    <string name="tolak">Tolak</string>
    <string name="terima">TERIMA</string>
    <string name="lokasi">Lokasi</string>
    <string name="navigasi">Navigasi</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="kecamatan_dan_kota">Kecamatan dan Kota</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="nomor_handphone_aktif">Nomor handphone aktif</string>
    <string name="cari">Cari</string>
    <string name="status">Status</string>
    <string name="belum">Belum</string>
    <string name="ya">Ya</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ketikkan_pesan">Ketikkan pesan</string>
    <string name="message">message</string>
    <string name="anda">Anda</string>
    <string name="foto">Foto</string>
    <string name="admin">Admin</string>
    <string name="undescot">_</string>
    <string name="masukkan_kode">Masukkan kode</string>
    <string name="list_temp_data">List Temp Data</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="register">Register</string>
    <string name="blank_fragment_1">Blank Fragment 1</string>
    <string name="blank_fragment_2">Blank Fragment 2</string>
    <string name="menu_setting">Setting</string>
    <string name="main_activity">Main Activity</string>
    <string name="authentication">Authentication</string>
    <string name="sistem_manajemen_disiplin_dan_kinerja_asn">Sistem Manajemen Disiplin dan Kinerja ASN</string>
    <string name="riwayat">Riwayat</string>
    <string name="tentang_sistem">Tentang Sistem</string>
    <string name="kab_banggai_kepulauan">Kab. Banggai Kepulauan</string>
    <string name="jenis_akun">Jenis Akun</string>
    <string name="pegawai">Pegawai</string>
    <string name="operator">Operator</string>
    <string name="datang">Datang</string>
    <string name="pulang">Pulang</string>
    <string name="apel">Apel</string>
    <string name="absen_datang">Absen Datang</string>
    <string name="absen_pulang">Absen Pulang</string>
    <string name="nip">NIP</string>
    <string name="kirim">Kirim</string>
    <string name="absen">Absen</string>
    <string name="detail_riwayat">Detail Riwayat</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="password_kosongkan_jika_tidak_ingin_mengubah">Password (Kosongkan jika tidak ingin mengubah)</string>
    <string name="let_value_empty">Kosongkan jika tidak ingin mengubah password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="simpan">Simpan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="detail_absensi">Detail Absensi</string>
    <string name="detail_pegawai">Detail Pegawai</string>
    <string name="jabatan">Jabatan</string>
    <string name="alpa">Alpa</string>
    <string name="sakit">Sakit</string>
    <string name="cuti">Cuti</string>
    <string name="chat_wa">Chat WA</string>
    <string name="izin">Izin</string>
    <string name="tld">TLD</string>
    <string name="tdd">TDD</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="about">Dikembangkan oleh:
KABIR LAND TECHNOLOGY
"Mendukung Indonesia sebagai Digital Energy of Asia, UMKM Go Online, mewujudkan transparansi dan perlindungan privasi."
Kontak : 081341717979 | E-mail : halo@kabirland.technology | Website : www.kabirland.technology</string>
    <string name="update_aplikasi">Update Aplikasi</string>
</resources>
