<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav"
    android:label="Authentication"
    tools:showIn="navigation_view"
    app:startDestination="@id/navBeranda">
    <fragment
        android:id="@+id/lihatFotoFragment"
        android:name="com.bangkep.sistemabsensi.utils.LihatFotoFragment"
        android:label="@string/foto"
        tools:layout="@layout/fragment_lihat_foto"
        />
    <fragment
        android:id="@+id/navBeranda"
        android:name="com.bangkep.sistemabsensi.ui.main.beranda.BerandaFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_beranda" />
    <fragment
        android:id="@+id/navRiwayat"
        android:name="com.bangkep.sistemabsensi.ui.main.riwayat.RiwayatFragment"
        android:label="@string/riwayat"
        tools:layout="@layout/fragment_riwayat" />
    <fragment
        android:id="@+id/navProfil"
        android:name="com.bangkep.sistemabsensi.ui.main.profil.ProfilFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/navAbout"
        android:name="com.bangkep.sistemabsensi.ui.main.about.AboutFragment"
        android:label="@string/tentang_sistem"
        tools:layout="@layout/fragment_about" />
</navigation>