<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardMain"
    style="@style/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textStatus"
    android:layout_centerHorizontal="true"
    android:layout_margin="@dimen/h2"
    android:elevation="@dimen/h2"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/h2"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_75"
            android:layout_height="@dimen/_75"
            android:id="@+id/imgFoto"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/h1"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/h2"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/imgFoto"
            android:layout_centerVertical="true"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/nama"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textNip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/nip"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textJabatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/jabatan"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/black"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnKonfirmasi"
                style="@style/buttonStandardBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_margin="@dimen/h2"
                android:padding="@dimen/h3"
                android:text="@string/konfirmasi"
                android:layout_gravity="end"
                android:textColor="@color/white"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
