<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardMain"
    style="@style/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textStatus"
    android:layout_centerHorizontal="true"
    android:layout_margin="@dimen/h2"
    android:elevation="@dimen/h2"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/h2"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:id="@+id/imgFoto"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/h1"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/h2"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/imgFoto"
            android:layout_centerVertical="true"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tanggal"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textJenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/absen"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/status"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/black"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
